RESOLVED FIXED196507
[ContentChangeObserver] Hover menus do not function on fidelity.com
https://bugs.webkit.org/show_bug.cgi?id=196507
Summary [ContentChangeObserver] Hover menus do not function on fidelity.com
alan
Reported 2019-04-02 13:27:14 PDT
Attachments
Patch (4.53 KB, patch)
2019-04-02 13:30 PDT, alan
no flags
alan
Comment 1 2019-04-02 13:30:47 PDT
WebKit Commit Bot
Comment 2 2019-04-02 14:11:55 PDT
Comment on attachment 366530 [details] Patch Clearing flags on attachment: 366530 Committed r243760: <https://trac.webkit.org/changeset/243760>
WebKit Commit Bot
Comment 3 2019-04-02 14:11:56 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.