[ContentChangeObserver] Hover menus do not function on fidelity.com https://bugs.webkit.org/show_bug.cgi?id=196507 <rdar://problem/49496520>

Reviewed by Simon Fraser.

Source/WebCore:

fidelity.com has 400ms hover intent timer to bring up the main menus.

Test: fast/events/touch/ios/content-observation/400ms-hover-intent.html

* page/ios/ContentChangeObserver.cpp:

LayoutTests:

* fast/events/touch/ios/content-observation/400ms-hover-intent-expected.txt: Added.
* fast/events/touch/ios/content-observation/400ms-hover-intent.html: Added.


Canonical link: https://commits.webkit.org/210771@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@243760 268f45cc-cd09-0410-ab3c-d52691b4dbfc